Fixed banner issue on firefox (linux)

--- a/_sass/layout/_header.sass
+++ b/_sass/layout/_header.sass
@@ -3,13 +3,13 @@ header.header-name-studio
   align-items: center
   justify-content: flex-start
   width: 100%
-  max-height: 50vh
+  height: 50vh
   margin-top: 56px
   transition: height .2s ease-in-out
+  background-image: url( "/assets/img/banner.png" )
+  background-position: center center
+  background-size: cover
   overflow: hidden
-
-  img
-    width: 100%
 
   @media (min-width: 992px)
     margin-top: 64px
